bugfixes to run file, better spacing for terminal, file splash screen

--- a/src/frontend/src/views/Project/xterm.scss
+++ b/src/frontend/src/views/Project/xterm.scss
@@ -1,5 +1,8 @@
 @import '../../Layout';
 :global{
+    .terminal{
+        margin:1em;
+    }
     .xterm-theme-default, .xterm-theme-default .xterm-viewport, .xterm-wrapper-default{
         background-color:$darkTerminal !important;
     }
